--- a/advance_mapping_1/src/main/resources/application.properties
+++ b/advance_mapping_1/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.application.name=spring_security_1
 spring.datasource.url=jdbc:postgresql://localhost:5444/spring_security_db
 spring.datasource.username=postgres
 spring.datasource.password=password
+
+logging.level.org.hibernate.SQL=trace
+logging.level.org.hibernate.orm.jdbc.bind=trace
